tree-sitter-org/grammar.js
    document: $ => seq(
      optional($.zeroth_section),
      repeat($.heading),
    ),

    // §3 Headings
    heading: $ => prec.right(seq(
      field('stars', $.stars),
      $._S,
      optional(field('todo', $.todo_keyword)),
      optional(field('priority', $.priority)),
      optional(field('is_comment', $._COMMENT_TOKEN)),
      optional(field('title', $._heading_title)),
      optional(field('tags', $.tags)),
      $._NL,
      optional(field('planning', $.planning)),
      optional(field('properties', $.property_drawer)),
      repeat($._blank_line),
      optional(field('body', $.section)),
      repeat($.heading),
      optional($._HEADING_END),
    )),

    // stars: emitted by external scanner (column 0 + '*'+)
    // Declared in externals — no grammar rule needed.

    todo_keyword: $ => seq(
      $._TODO_KW,
      $._S,
    ),

    priority: $ => seq(
      '[#',
      field('value', choice(/[A-Z]/, /[0-9]+/)),
      ']',
      $._S,
    ),

    _COMMENT_TOKEN: _ => 'COMMENT',

    _heading_title: $ => repeat1($._object_nolb),

    tags: $ => seq(
      ':',
      $.tag,
      repeat(seq(':', $.tag)),
      ':',
    ),

    tag: _ => /[A-Za-z0-9_@#%]+/,

    // §4 Sections
    zeroth_section: $ => choice(
      seq(
        repeat(choice($.special_keyword, $.comment, $._blank_line)),
        field('properties', $.property_drawer),
        repeat(choice($._zs_element, $._blank_line)),
      ),
      seq(
        repeat(choice($.special_keyword, $.comment, $._blank_line)),
        repeat1(choice($._zs_element, $._blank_line)),
      ),
    ),

    section: $ => prec.left(repeat1(choice(
      $._section_element,
      $._blank_line,
    ))),

    // §5 Element Dispatch
    _zs_element: $ => choice(
      $._zs_element_affiliated,
      $.special_keyword,
      $._non_affiliatable,
      $._affiliatable,
    ),

    _section_element: $ => choice(
      $._section_element_affiliated,
      $.special_keyword,
      $._non_affiliatable,
      $._affiliatable,
    ),

    center_block: $ => seq(
      optional($._INDENT),
      token(prec(2, ci('#+begin_center'))),
      optional(field('parameters', $._block_params)),
      $._NL,
      field('body', optional($._gblock_body)),
      optional($._INDENT),
      token(prec(2, ci('#+end_center'))),
      optional($._TRAILING),
      $._NL,
    ),

    quote_block: $ => seq(
      optional($._INDENT),
      token(prec(2, ci('#+begin_quote'))),
      optional(field('parameters', $._block_params)),
      $._NL,
      field('body', optional($._gblock_body)),
      optional($._INDENT),
      token(prec(2, ci('#+end_quote'))),
      optional($._TRAILING),
      $._NL,
    ),

    special_block: $ => seq(
      optional($._INDENT),
      token(prec(1, ci('#+begin_'))),
      field('name', $._GBLOCK_NAME),
      optional(field('parameters', $._block_params)),
      $._NL,
      field('body', optional($._gblock_body)),
      optional($._INDENT),
      token(prec(1, ci('#+end_'))),
      $._BLOCK_END_MATCH,
      optional($._TRAILING),
      $._NL,
    ),

    _block_params: $ => seq($._S, $._REST_OF_LINE),

    _gblock_body: $ => repeat1(choice(
      $._section_element,
      $._blank_line,
    )),

    // --- 6.2 Drawers ---
    drawer: $ => seq(
      optional($._INDENT),
      token(prec(2, ':')),
      field('name', alias($._DRAWER_NAME, $.drawer_name)),
      ':',
      optional($._TRAILING),
      $._NL,
      field('body', optional($._drawer_body)),
      optional($._INDENT),
      token(prec(2, ci(':end:'))),
      optional($._TRAILING),
      $._NL,
    ),

    _DRAWER_NAME: _ => /[A-Za-z0-9_\-]+/,

    _drawer_body: $ => repeat1(choice(
      $._drawer_indented_list,
      $._drawer_indented_timestamp_line,
      $.drawer_kv_line,
      $.drawer_double_colon_line,
      $._drawer_element,
      $._blank_line,
    )),

    dynamic_block: $ => seq(
      optional($._INDENT),
      token(prec(3, ci('#+begin:'))),
      $._S,
      field('name', alias($._DYNBLOCK_NAME, $.dynamic_block_name)),
      optional(field('parameters', seq($._S, $._REST_OF_LINE))),
      $._NL,
      field('body', optional($._dynblock_body)),
      optional($._INDENT),
      token(prec(3, ci('#+end:'))),
      optional($._TRAILING),
      $._NL,
      $._DYNBLOCK_SYNC,
    ),

    _DYNBLOCK_NAME: _ => /[^ \t\n]+/,

    _dynblock_body: $ => repeat1(choice(
      $._section_element,
      $._blank_line,
    )),

    // --- 6.4 Footnote Definitions ---
    // Footnote definitions start at column 0 by construction (after NL).
    // Column-0 enforcement is a semantic check, not grammar-level.
    completion_counter: _ => token(seq(
      '[',
      /[0-9]*/,
      choice(
        seq('/', /[0-9]*/),
        '%',
      ),
      ']',
    )),

    org_table: $ => prec(1, seq(
      $._TABLE_START,
      repeat1($.table_row),
      repeat($.tblfm_line),
    )),

    table_row: $ => seq(
      /[ \t]*\|/,
      choice(
        field('rule', alias($._table_rule_row, $.table_rule)),
        $._table_std_row,
      ),
      $._NL,
    ),

    _table_rule_row: _ => seq('-', /[^\n]*/),

    _table_std_row: $ => seq(
      $.table_cell,
      repeat(seq('|', $.table_cell)),
      optional('|'),
    ),

    table_cell: $ => choice(
      seq($._S, $._table_cell_objects, optional($._S)),
      seq(optional($._S), $._table_cell_objects, optional($._S)),
      $._S,
    ),

    _table_cell_objects: $ => repeat1($._object_table),

    comment_block: $ => seq(
      optional($._INDENT),
      token(prec(2, ci('#+begin_comment'))),
      optional($._TRAILING),
      $._NL,
      field('body', optional($._raw_block_body)),
      token(prec(3, /[ \t]*#\+end_comment/i)),
      optional($._TRAILING),
      $._NL,
    ),

    example_block: $ => seq(
      optional($._INDENT),
      token(prec(2, ci('#+begin_example'))),
      optional(field('parameters', $._block_params)),
      $._NL,
      field('body', optional($.example_block_body)),
      token(prec(3, /[ \t]*#\+end_example/i)),
      optional($._TRAILING),
      $._NL,
    ),

    example_block_body: $ => repeat1($.example_line),

    example_line: _ => seq(/[^\n]*/, '\n'),

    export_block: $ => seq(
      optional($._INDENT),
      token(prec(2, ci('#+begin_export'))),
      $._S,
      field('backend', alias($._EXPORT_BACKEND, $.export_backend)),
      optional(field('parameters', seq($._S, $._REST_OF_LINE))),
      $._NL,
      field('body', optional($._raw_block_body)),
      token(prec(3, /[ \t]*#\+end_export/i)),
      optional($._TRAILING),
      $._NL,
    ),

    _EXPORT_BACKEND: _ => /[^ \t\n]+/,

    src_block: $ => seq(
      optional($._INDENT),
      token(prec(2, ci('#+begin_src'))),
      optional(seq(
        $._S,
        field('language', alias($._SRC_LANGUAGE, $.language)),
        optional(seq($._S, field('switches', alias($._REST_OF_LINE, $.src_switches)))),
      )),
      $._NL,
      field('body', optional($.src_block_body)),
      token(prec(3, /[ \t]*#\+end_src/i)),
      optional($._TRAILING),
      $._NL,
    ),

    _SRC_LANGUAGE: _ => /[^ \t\n]+/,

    src_block_body: $ => repeat1($.src_line),

    src_line: _ => seq(/[^\n]*/, '\n'),

    verse_block: $ => seq(
      optional($._INDENT),
      token(prec(2, ci('#+begin_verse'))),
      optional($._TRAILING),
      $._NL,
      field('body', optional($._gblock_body)),
      optional($._INDENT),
      token(prec(2, ci('#+end_verse'))),
      optional($._TRAILING),
      $._NL,
    ),

    _raw_block_body: $ => repeat1($._raw_line),

    comment: $ => prec(1, repeat1($._comment_line)),

    _comment_line: $ => choice(
      seq('#', ' ', optional(field('value', /[^\n]*/)), $._NL),
      seq('#', $._NL),
    ),

    // --- 7.6 Fixed-Width Areas ---
    fixed_width: $ => prec(1, repeat1($._fixed_width_line)),

    // _FIXED_WIDTH_COLON (external) enforces the BOL constraint from the spec:
    //   _fixed_width_line <- _BOL _INDENT? ':' (' ' value:[^\n]* / &_NL) _NL
    // The scanner only emits this token when ':' is the first non-whitespace
    // character on the line (column 0, or column > 0 after list-scanner
    // positioning with prev_char == 0). It consumes the optional leading
    // indentation and the ':' itself.
    _fixed_width_line: $ => choice(
      seq($._FIXED_WIDTH_COLON, ' ', optional(field('value', /[^\n]*/)), $._NL),
      seq($._FIXED_WIDTH_COLON, $._NL),
    ),

    // --- 7.7 Horizontal Rules ---
    special_keyword: $ => choice(
      seq(
        '#+',
        field('key', alias($._TODO_SPECIAL_KEY, $.keyword_key)),
        ':',
        $._TODO_SETUP_SYNC,
        optional(seq($._S, field('value', alias($._REST_OF_LINE, $.keyword_value)))),
        $._NL,
      ),
      seq(
        '#+',
        field('key', alias($._SPECIAL_KEY_NO_TODO, $.keyword_key)),
        ':',
        optional(seq($._S, field('value', alias($._REST_OF_LINE, $.keyword_value)))),
        $._NL,
      ),
    ),

    _TODO_SPECIAL_KEY: _ => token(prec(2, ci('TODO'))),

    _SPECIAL_KEY_NO_TODO: _ => token(prec(2, choice(
      ci('TITLE'), ci('AUTHOR'), ci('DATE'), ci('EMAIL'),
      ci('DESCRIPTION'), ci('KEYWORDS'), ci('LANGUAGE'),
      ci('CATEGORY'), ci('FILETAGS'), ci('TAGS'),
      ci('SEQ_TODO'), ci('TYP_TODO'),
      ci('PRIORITIES'), ci('PROPERTY'), ci('STARTUP'),
      ci('ARCHIVE'), ci('COLUMNS'), ci('OPTIONS'),
    ))),

    // --- 7.9 Affiliated Keywords ---
    paragraph: $ => prec(-1, repeat1($._paragraph_line)),

    _paragraph_line: $ => seq(
      repeat1($._object),
      $._NL,
    ),

    // §8 Objects

    // --- 8.1 Export Snippets ---
    footnote_reference: $ => choice(
      $._fn_ref_inline,
      $._fn_ref_anonymous,
      $._fn_ref_labeled,
    ),

    _fn_ref_labeled: $ => seq(
      '[fn:',
      field('label', alias($._FN_LABEL, $.fn_label)),
      ']',
    ),

    _fn_ref_inline: $ => seq(
      '[fn:',
      field('label', alias($._FN_LABEL, $.fn_label)),
      ':',
      field('definition', $._fn_ref_def),
      ']',
    ),

    _fn_ref_anonymous: $ => seq(
      '[fn::',
      field('definition', $._fn_ref_def),
      ']',
    ),

    italic: $ => seq(
      $._MARKUP_OPEN_ITALIC,
      field('body', repeat1($._object)),
      $._MARKUP_CLOSE_ITALIC,
    ),

    plain_text: $ => $._PLAIN_TEXT,

    // §9 Object Sets
    _object: $ => choice(
      $.export_snippet, $.footnote_reference, $.citation,
      $.inline_source_block, $.line_break,
      $.regular_link, $.angle_link, $.plain_link,
      $.target, $.radio_target, $.timestamp,
      $.completion_counter,
      $.bold, $.italic, $.underline, $.strike_through,
      $.verbatim, $.code, $.plain_text,
    ),

    _S: _ => /[ \t]+/,
    _NL: _ => /\n/,
    _INDENT: _ => token(prec(-1, /[ \t]+/)),
    _TRAILING: _ => /[ \t]+/,
    _REST_OF_LINE: _ => /[^\n]+/,

    _blank_line: _ => token(prec(-1, /[ \t]*\n/)),
