tree-sitter-org/test/corpus/error_recovery.txt
================
Unclosed bold treated as text
================
This has *unclosed markup on one line.

---

(document
  (zeroth_section
    (paragraph
      (plain_text))))

================
Standalone stars not heading (no space)
================
*not a heading

---

(document
  (ERROR
    (plain_text))
  (zeroth_section))
