tree-sitter-org/test/corpus/fixed_width.txt
================
Single fixed-width line
================
: single line

---

(document
  (zeroth_section
    (fixed_width)))

================
Empty fixed-width line (colon alone)
================
:

---

(document
  (zeroth_section
    (fixed_width)))

================
Multiple consecutive fixed-width lines each produce their own node
================
: line one
: line two
: line three

---

(document
  (zeroth_section
    (fixed_width)
    (fixed_width)
    (fixed_width)))

================
Indented fixed-width line
================
   : indented

---

(document
  (zeroth_section
    (fixed_width)))

================
Indented empty fixed-width line
================
   :

---

(document
  (zeroth_section
    (fixed_width)))

================
Fixed-width followed by paragraph
================
: area line one
: area line two

This is a paragraph.

---

(document
  (zeroth_section
    (fixed_width)
    (fixed_width)
    (blank_line)
    (paragraph
      (plain_text)
      (newline))))

================
Double colon in paragraph is not fixed-width
================
test :: Not a fixed width section

---

(document
  (zeroth_section
    (paragraph
      (plain_text)
      (newline))))

================
Paragraph ending with colon is not fixed-width
================
Test paragraph:

---

(document
  (zeroth_section
    (paragraph
      (plain_text)
      (newline))))

================
Colon in middle of paragraph is not fixed-width
================
Another test: yes, it passes

---

(document
  (zeroth_section
    (paragraph
      (plain_text)
      (newline))))
